Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2023/06/21:
- TestEngine: in helper ImGuiTestGenericItemStatus storage struct,
  renamed 'bool Ret' to 'bool RetValue' as it is less ambiguous.

2023/06/14
- TestEngine: ItemInfoOpenFullPath() can focus/select inactive docked windows.
  (similar to e.g. opening an intermediary tree node).

2023/06/08
- TestEngine: Made failed IM_CHECK() with io.ConfigBreakOnError enabled call IM_DEBUG_BREAK()
  directly instead of calling IM_ASSERT(0).
- TestEngine: Moved suggested IM_ASSERT() override out of test engine's imconfig.h and
  into our TestSuite's imconfig.h.

2023/05/31
- TestEngine: Added ctx->ItemIsChecked() and ctx->ItemIsOpened() helpers.

2023/05/30:
- TestEngine: Attempt to resize host window when aiming at a clipped item within menu layer.
  (which is non-scrolling).
- TestEngine: Mock viewport emulation transfer platform focus when a viewport is destroyed.

2023/05/09:
- TestEngine: Added IsWarmUpGuiFrame() query to avoid polling frame-count.

2023/04/26:
- TestEngine: Reworked mouse actions to avoid unnecessarily focusing windows if not necessary.
  If an item is visible and within a window not inhibited by a popup, we don't need to focus
  the target window before clicking.
  This reduces the amount of inconsistency between TestEngine and user actions.

2023/04/24:
- TestEngine: Fixed IM_CHECK_STR_xxx() macros not honoring io.ConfigBreakOnError.
- TestEngine: Added result check in WindowFocus().
- TestEngine: Removed unnecessary bool return value from WindowBringToFront().
- TestEngine: Added ImGuiTestOpFlags_NoFocusWindow support in WindowBringToFront(). (#24)

2023/04/06;
- TestEngine: Made simulated mouse-clicks activate platform-level focus when changing viewports.